--- a/hw_asr/configs/train_config.json
+++ b/hw_asr/configs/train_config.json
@@ -1,5 +1,5 @@
 {
-  "name": "50_batch_test",
+  "name": "train_config",
   "n_gpu": 1,
   "preprocessing": {
     "sr": 16000,
@@ -14,20 +14,24 @@
     "wave": [
       {
         "type": "Noise",
-        "args": {}
+        "args": {
+         "p": 0.1
+        }
       },
       {
         "type": "PitchShift",
         "args": {
           "sr": 16000,
-          "n_step": -3
+          "n_step": -3,
+          "p": 0.1
         }
       },
       {
         "type": "Volume",
         "args": {
-          "gain": 2.0,
-          "gain_type": "amplitude"
+          "gain": 1.1,
+          "gain_type": "amplitude",
+          "p": 0.1
         }
       }
     ],
@@ -36,7 +40,8 @@
         "type": "TimeStretching",
         "args": {
           "n_freq": 128,
-          "fix_rate": 1.2
+          "fix_rate": 1.2,
+          "p": 0.1
         }
       }
     ]
@@ -51,40 +56,37 @@
   },
   "data": {
     "train": {
-      "batch_size": 10,
-      "num_workers": 2,
+      "batch_size": 128,
+      "num_workers": 5,
       "datasets": [
         {
           "type": "LibrispeechDataset",
           "args": {
-            "part": "dev-clean",
+            "part": "train-clean-360",
             "max_audio_length": 20.0,
-            "max_text_length": 200,
-            "limit": 500
+            "max_text_length": 200
           }
         }
       ]
     },
     "val": {
-      "batch_size": 10,
-      "num_workers": 2,
+      "batch_size": 128,
+      "num_workers": 5,
       "datasets": [
         {
           "type": "LibrispeechDataset",
           "args": {
-            "part": "dev-clean",
-            "max_audio_length": 20.0,
-            "max_text_length": 200,
-            "limit": 20
+            "part": "dev-clean"
           }
         }
       ]
     }
   },
   "optimizer": {
-    "type": "Adam",
+    "type": "AdamW",
     "args": {
-      "lr": 1e-2
+      "lr": 3e-4,
+      "weight_decay": 0.01
     }
   },
   "loss": {
@@ -108,26 +110,25 @@
   "lr_scheduler": {
     "type": "OneCycleLR",
     "args": {
-      "steps_per_epoch": 50,
-      "epochs": 200,
+      "steps_per_epoch": 434,
+      "epochs": 20,
       "anneal_strategy": "cos",
-      "max_lr": 1e-2,
+      "max_lr": 3e-4,
       "pct_start": 0.2
     }
   },
   "trainer": {
-    "epochs": 200,
-    "save_dir": "saved/",
+    "epochs": 20,
+    "save_dir": "saved_360/",
     "save_period": 5,
     "verbosity": 2,
     "monitor": "min val_loss",
     "early_stop": 100,
     "visualize": "wandb",
-    "wandb_project": "asr_project",
-    "len_epoch": 50,
+    "wandb_project": "asr_project_360",
     "grad_norm_clip": 10
   },
   "beam_search": {
-    "len_lm_path": "kenlm_model.arpa"
+    "len_lm_path": "asr/kenlm_model.arpa"
   }
 }
