--- a/hw_asr/configs/train_config.json
+++ b/hw_asr/configs/train_config.json
@@ -105,12 +105,36 @@
       "args": {
         "name": "CER (argmax)"
       }
+    },
+    {
+      "type": "BeamSearchCERMetric",
+      "args": {
+        "name": "CER (beam search)"
+      }
+    },
+    {
+      "type": "BeamSearchCERMetricWithLm",
+      "args": {
+        "name": "CER (beam search with lm)"
+      }
+    },
+    {
+      "type": "BeamSearchWERMetric",
+      "args": {
+        "name": "WER (beam search)"
+      }
+    },
+    {
+      "type": "BeamSearchWERMetricWithLm",
+      "args": {
+        "name": "WER (beam search with lm)"
+      }
     }
   ],
   "lr_scheduler": {
     "type": "OneCycleLR",
     "args": {
-      "steps_per_epoch": 434,
+      "steps_per_epoch": 20,
       "epochs": 20,
       "anneal_strategy": "cos",
       "max_lr": 3e-4,
