--- a/hw_asr/configs/train_config.json
+++ b/hw_asr/configs/train_config.json
@@ -17,7 +17,7 @@
     ]
   },
   "arch": {
-    "type": "DeepSpeech",
+    "type": "DeepSpeech2",
     "args": {
       "n_feats": 128,
       "hidden_size": 512,
@@ -34,7 +34,7 @@
           "args": {
             "part": "train-clean-100",
             "max_audio_length": 20.0,
-            "max_text_length": 300
+            "max_text_length": 200
           }
         },
         {
@@ -42,7 +42,7 @@
           "args": {
             "part": "train-clean-360",
             "max_audio_length": 20.0,
-            "max_text_length": 300
+            "max_text_length": 200
           }
         }
       ]
@@ -99,7 +99,7 @@
   "lr_scheduler": {
     "type": "OneCycleLR",
     "args": {
-      "steps_per_epoch": 1000,
+      "steps_per_epoch": 1419,
       "epochs": 40,
       "anneal_strategy": "cos",
       "max_lr": 3e-4,
@@ -115,7 +115,8 @@
     "early_stop": 100,
     "visualize": "wandb",
     "wandb_project": "asr_project_360_100",
-    "grad_norm_clip": 10
+    "grad_norm_clip": 10,
+    "log_step": 300
   },
   "beam_search": {
     "len_lm_path": "asr/kenlm_model.arpa"
